--- a/settings/index.html
+++ b/settings/index.html
@@ -8,7 +8,7 @@
         <p>If Homey understood you wrong, go to <a href="/manager/speech-input/" target="_blank">this page</a> and fill this word or sentence with the correct replacement below.</p>
         
         <h2>Settings</h2>
-        <p>Fill out the words and there replacements below (Example: nights - lights). Only complete combinations are stored (max 50 for now).</p>
+        <p>Fill out the words and their replacements below (Example: nights - lights). Only complete combinations are stored (max 50 for now).</p>
         <p><strong style="color: red">After saving you need to restart the app (Settings > Apps) for the changes to take effect!</strong></p>
 
         <fieldset>
