Auto reload triggers after settings are saved

--- a/settings/index.html
+++ b/settings/index.html
@@ -9,7 +9,6 @@
         
         <h2>Settings</h2>
         <p>Fill out the words and their replacements below (Example: nights - lights). Only complete combinations are stored (max 50 for now).</p>
-        <p><strong style="color: red">After saving you need to restart the app (Settings > Apps) for the changes to take effect!</strong></p>
 
         <fieldset>
             <legend>Word-list</legend>
@@ -25,7 +24,7 @@
             </table>
         </fieldset>
         
-        <p style="display:none; color: green; text-align: right;" class="saved"> Settings saved, please restart the app...</p>
+        <p style="display:none; color: green; text-align: right;" class="saved">Settings saved</p>
         <button class="right" onclick="save()">Save changes</button>
 
         <script type="text/javascript">
